# moneytracker

./: README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  extensions.py
app/auth/: forms.py  routes.py
app/auth/templates/auth/: login.html  register.html
app/budget/: forms.py  routes.py
app/budget/templates/budget/: budget_form.html  budget_list.html
app/category/: forms.py  routes.py
app/category/templates/category/: category_form.html  category_list.html
app/goal/: forms.py  routes.py
app/goal/templates/goal/: goal_form.html  goal_list.html
app/main/: routes.py
app/main/templates/main/: dashboard.html  landing.html
app/models/: budget.py  category.py  goal.py  transaction.py  user.py
app/profile/: forms.py  routes.py
app/profile/templates/profile/: change_password.html  profile_detail.html  profile_form.html
app/static/css/: style.css
app/templates/: layout.html  layout_auth.html
app/templates/components/: flash.html  navbar.html
app/templates/errors/: 404.html  500.html
app/transaction/: forms.py  routes.py
app/transaction/templates/transaction/: transaction_calendar.html  transaction_form.html  transaction_list.html
migrations/versions/: 1f690b2d4dbf_change_date_to_datetime.py  35b26a9075fe_initial_migration.py  3ac1d02e2a08_add_goal_table_and_tag_to_transaction.py
